--- a/index.html
+++ b/index.html
@@ -1,9 +1,4 @@
 <!DOCTYPE HTML>
-<!--
-	Hyperspace by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
 <html>
 	<head>
 		<title>Hyperspace by HTML5 UP</title>
@@ -20,8 +15,8 @@
 					<nav>
 						<ul>
 							<li><a href="#intro">Welcome</a></li>
-							<li><a href="#one">Who we are</a></li>
-							<li><a href="#two">What we do</a></li>
+							<li><a href="#one">Who I am</a></li>
+							<li><a href="#two">What I do</a></li>
 							<li><a href="#three">Get in touch</a></li>
 						</ul>
 					</nav>
@@ -34,9 +29,11 @@
 				<!-- Intro -->
 					<section id="intro" class="wrapper style1 fullscreen fade-up">
 						<div class="inner">
-							<h1>Hyperspace</h1>
-							<p>Just another fine responsive site template designed by <a href="http://html5up.net">HTML5 UP</a><br />
-							and released for free under the <a href="http://html5up.net/license">Creative Commons</a>.</p>
+							<div class="typewriter">
+								<h1 id="typewriter-text"></h1>
+							</div>
+							<p>Hello! I'm <b>Saad Inam</b>, a Software Engineering Fellow at Headstarter<br />
+							 and a student pursuing Bachelor's in CS at IBA Karachi.</p>
 							<ul class="actions">
 								<li><a href="#one" class="button scrolly">Learn more</a></li>
 							</ul>
@@ -46,37 +43,37 @@
 				<!-- One -->
 					<section id="one" class="wrapper style2 spotlights">
 						<section>
-							<a href="#" class="image"><img src="images/pic01.jpg" alt="" data-position="center center" /></a>
+							<a href="#" class="image"><img src="Image.jpeg" alt="" data-position="center center" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2>Sed ipsum dolor</h2>
-									<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
+									<h2>About Me</h2>
+									<p>I am a passionate individual about technology and cars. I currently am a sophomore, pursuing Bachelor's in Computer Science at IBA Karachi. In my free time, I love playing online video games and automating monotonous tasks by creating diverse scripts!</p>
 									<ul class="actions">
-										<li><a href="generic.html" class="button">Learn more</a></li>
+<!--										<li><a href="generic.html" class="button">Learn more</a></li>-->
 									</ul>
 								</div>
 							</div>
 						</section>
 						<section>
-							<a href="#" class="image"><img src="images/pic02.jpg" alt="" data-position="top center" /></a>
+							<a href="#" class="image"><img src="images/github.png" alt="" data-position="top center" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2>Feugiat consequat</h2>
-									<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
+									<h2>My GitHub</h2>
+									<p>I regularly update my GitHub profile with new diverse projects that I build using programming languages such as C++, Swift, etc. </p>
 									<ul class="actions">
-										<li><a href="generic.html" class="button">Learn more</a></li>
+										<li><a href="https://github.com/saadmemon1" class="button">Learn more</a></li>
 									</ul>
 								</div>
 							</div>
 						</section>
 						<section>
-							<a href="#" class="image"><img src="images/pic03.jpg" alt="" data-position="25% 25%" /></a>
+							<a href="#" class="image"><img src="images/linkedin.webp" alt="" data-position="25% 25%" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2>Ultricies aliquam</h2>
-									<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
+									<h2>My LinkedIn</h2>
+									<p>You can check out my LinkedIn profile to get information about my work experience, education, skills, certifications and projects. I offer freelancing services on LinkedIn too! Always looking to connect with new people from all around the world!</p>
 									<ul class="actions">
-										<li><a href="generic.html" class="button">Learn more</a></li>
+										<li><a href="https://www.linkedin.com/in/saadinamm/" class="button">Learn more</a></li>
 									</ul>
 								</div>
 							</div>
@@ -86,43 +83,43 @@
 				<!-- Two -->
 					<section id="two" class="wrapper style3 fade-up">
 						<div class="inner">
-							<h2>What we do</h2>
-							<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus, lacus eget hendrerit bibendum, urna est aliquam sem, sit amet imperdiet est velit quis lorem.</p>
+							<h2>What I do</h2>
+							<p>These are some of my areas of expertise that I am proficient at.</p>
 							<div class="features">
 								<section>
 									<span class="icon solid major fa-code"></span>
-									<h3>Lorem ipsum amet</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
+									<h3>iOS App Development</h3>
+									<p>I have built multiple projects using Swift and SwiftUI to create applications for iOS including their UI.</p>
 								</section>
-								<section>
-									<span class="icon solid major fa-lock"></span>
-									<h3>Aliquam sed nullam</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
-								</section>
+<!--								<section>-->
+<!--									<span class="icon solid major fa-lock"></span>-->
+<!--									<h3>Aliquam sed nullam</h3>-->
+<!--									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>-->
+<!--								</section>-->
 								<section>
 									<span class="icon solid major fa-cog"></span>
-									<h3>Sed erat ullam corper</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
+									<h3>Software Development</h3>
+									<p>I create applications using C++ and various other libraries such as Raylib for User Interface of the application.</p>
 								</section>
 								<section>
 									<span class="icon solid major fa-desktop"></span>
-									<h3>Veroeros quis lorem</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
+									<h3>Data Visualization</h3>
+									<p>I use my Microsoft Excel and PowerBI skills to visualize data and create dashboards to display simplified metrics. I also provide insights on trends of the data and predict forecast of the data.</p>
 								</section>
-								<section>
-									<span class="icon solid major fa-link"></span>
-									<h3>Urna quis bibendum</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
-								</section>
-								<section>
-									<span class="icon major fa-gem"></span>
-									<h3>Aliquam urna dapibus</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
-								</section>
+<!--								<section>-->
+<!--									<span class="icon solid major fa-link"></span>-->
+<!--									<h3>Urna quis bibendum</h3>-->
+<!--									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>-->
+<!--								</section>-->
+<!--								<section>-->
+<!--									<span class="icon major fa-gem"></span>-->
+<!--									<h3>Aliquam urna dapibus</h3>-->
+<!--									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>-->
+<!--								</section>-->
 							</div>
-							<ul class="actions">
-								<li><a href="generic.html" class="button">Learn more</a></li>
-							</ul>
+<!--							<ul class="actions">-->
+<!--								<li><a href="generic.html" class="button">Learn more</a></li>-->
+<!--							</ul>-->
 						</div>
 					</section>
 
@@ -130,7 +127,7 @@
 					<section id="three" class="wrapper style1 fade-up">
 						<div class="inner">
 							<h2>Get in touch</h2>
-							<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus, lacus eget hendrerit bibendum, urna est aliquam sem, sit amet imperdiet est velit quis lorem.</p>
+							<p>I usually reply very quickly, so please never hesitate to reach out to me via any of the communication channels such as my email, LinkedIn or GitHub.</p>
 							<div class="split style1">
 								<section>
 									<form method="post" action="#">
@@ -155,28 +152,28 @@
 								</section>
 								<section>
 									<ul class="contact">
-										<li>
-											<h3>Address</h3>
-											<span>12345 Somewhere Road #654<br />
-											Nashville, TN 00000-0000<br />
-											USA</span>
-										</li>
+<!--										<li>-->
+<!--											<h3>Address</h3>-->
+<!--											<span>12345 Somewhere Road #654<br />-->
+<!--											Nashville, TN 00000-0000<br />-->
+<!--											USA</span>-->
+<!--										</li>-->
 										<li>
 											<h3>Email</h3>
-											<a href="#">user@untitled.tld</a>
+											<a href="#">saadinam.mn@gmail.com</a>
 										</li>
 										<li>
 											<h3>Phone</h3>
-											<span>(000) 000-0000</span>
+											<span>+92 303 2277365</span>
 										</li>
 										<li>
 											<h3>Social</h3>
 											<ul class="icons">
-												<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-												<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-												<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-												<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-												<li><a href="#" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+<!--												<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>-->
+<!--												<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>-->
+												<li><a href="https://github.com/saadmemon1" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+<!--												<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>-->
+												<li><a href="https://www.linkedin.com/in/saadinamm/" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 											</ul>
 										</li>
 									</ul>
@@ -191,7 +188,7 @@
 			<footer id="footer" class="wrapper style1-alt">
 				<div class="inner">
 					<ul class="menu">
-						<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						<li>&copy; Saad Inam. All rights reserved.</li>
 					</ul>
 				</div>
 			</footer>
