--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>Hyperspace by HTML5 UP</title>
+		<title>Saad Inam's Website</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -163,10 +163,6 @@
 										<li>
 											<h3>Email</h3>
 											<a href="#">saadinam.mn@gmail.com</a>
-										</li>
-										<li>
-											<h3>Phone</h3>
-											<span>+92 303 2277365</span>
 										</li>
 										<li>
 											<h3>Social</h3>
