Users will be redirected to the landing page after submitting the form

--- a/index.html
+++ b/index.html
@@ -217,10 +217,10 @@
                 </div>
 
                 <div class="contact-form-container">
-                    <form id="contact-form" class="contact-form" action="https://formsubmit.co/saadinam.mn@gmail.com" method="POST">
+                    <form id="contact-form" class="contact-form" action="https://formsubmit.co/aa0df48ea9f060a60f117d42b69b1570" method="POST">
                         <input type="hidden" name="_subject" value="New Contact Form Submission">
-                        <input type="hidden" name="_captcha" value="false">
                         <input type="hidden" name="_template" value="table">
+                        <input type="hidden" name="_next" value="https://saadmemon1.github.io/Personal-Website/">
                         <div class="form-group">
                             <label for="name">Name</label>
                             <input type="text" id="name" name="name" required>
