Fixed resume download button

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
             <h2 class="section-title">Resume</h2>
             <div class="resume-content">
                 <div class="resume-download">
-                    <a href="Saad Inam - Resume.pdf" download class="btn btn-primary">
+                    <a href="Saad Inam - Resume.pdf" download="Saad Inam - Resume.pdf" class="btn btn-primary">
                         <i class="fas fa-download"></i> Download Resume
                     </a>
                 </div>
