Updated experience and resume

--- a/index.html
+++ b/index.html
@@ -97,6 +97,18 @@
                         <h3 class="resume-section-title">Experience</h3>
                         <div class="resume-item">
                             <div class="resume-item-header">
+                                <h4>Data Structures TA</h4>
+                                <span class="resume-date">Aug 2025 - Dec 2025</span>
+                            </div>
+                            <p class="resume-company">IBA Karachi</p>
+                            <ul class="resume-details">
+                                <li>Assisted instructor in weekly lab sessions for ~30 students, clarifying concepts and guiding hands-on practice</li>
+                                <li>Graded weekly lab submissions and held office hours to address student queries</li>
+                            </ul>
+                        </div>
+
+                        <div class="resume-item">
+                            <div class="resume-item-header">
                                 <h4>Software Engineering Fellow</h4>
                                 <span class="resume-date">Aug 2024 - Sept 2024</span>
                             </div>
@@ -106,7 +118,7 @@
                                 <li>Developed Studyfy AI, a tool for summarizing YouTube videos using transcription and OpenAI APIs</li>
                             </ul>
                         </div>
-                        <!-- Add more experience items here -->
+
                          <div class="resume-item">
                             <div class="resume-item-header">
                                 <h4>Project Intern</h4>
