--- a/index.html
+++ b/index.html
@@ -133,10 +133,11 @@
                         <div class="resume-item">
                             <div class="resume-item-header">
                                 <h4>Team Leader (Outgoing Global Exchange)</h4>
-                                <span class="resume-date">Oct 2023 - Present</span>
+                                <span class="resume-date">Oct 2023 - Aug 2025</span>
                             </div>
                             <p class="resume-company">AIESEC in IBA</p>
                             <ul class="resume-details">
+                                <li>Directed Quality Assurance by verifying documentation, managing trackers, and coordinating with participants</li>
                                 <li>Spearheaded a recruitment tracker for MXP, improving data accuracy by 30% and generating strategic reports</li>
                             </ul>
                         </div>
